--- a/index.html
+++ b/index.html
@@ -5,25 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gelasio:ital,wght@0,400..700;1,400..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="darkBackground">
+    <header class="header">
         <h1 class="headerLogoText">Header Logo</h1>
-        <ul class="secondaryText">
-            <li><a>Header link one</a></li>
-            <li><a>Header link two</a></li>
-            <li><a>Header link three</a></li>
-        </ul>
+        <nav class="navLinks">    
+            <ul class="secondaryText">
+                <li><a href="#">Header link one</a></li>
+                <li><a href="#">Header link two</a></li>
+                <li><a href="#">Header link three</a></li>
+            </ul>
+        </nav>
+    </header>    
     <div class="heroContainer">
-        <div>
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's smaller font and color is a lower contrast.</p>
-        </div>
-        <div>
-            <img src="_blank" alt="">
-        </div>
+        <div class="hero">
+            <h1 class="heroText">This website is awesome</h1>
+            <p class="heroText">This website has some subtext that goes here under the main title. It's smaller font and color is a lower contrast.</p>
+            <button class="heroText">Sign Up</button>
+        </div>    
+        <img src="Images/pexels-pixabay-255527.jpg" alt="Image Placeholder">
     </div>
-    </header>
+    
     <section>
         <h1>Some random information</h1>
     </section>
