All html content added

--- a/index.html
+++ b/index.html
@@ -23,14 +23,44 @@
     <div class="heroContainer">
         <div class="hero">
             <h1 class="heroText">This website is awesome</h1>
-            <p class="heroText">This website has some subtext that goes here under the main title. It's smaller font and color is a lower contrast.</p>
+            <p class="heroTextSmall">This website has some subtext that goes here under the main title. It's smaller font and color is a lower contrast.</p>
             <button class="heroText">Sign Up</button>
         </div>    
-        <img src="Images/pexels-pixabay-255527.jpg" alt="Image Placeholder">
+        <img src="Images/pexels-pixabay-255527.jpg" alt="Image Placeholder" class="heroImageContainer">
     </div>
     
-    <section>
-        <h1>Some random information</h1>
-    </section>
+    <div class="information">
+        <h1 class="informationHeader">Some random information</h1>
+        <div class="informationContainer">
+            <div class="imageBorder"></div>
+            <div class="imageBorder"></div>
+            <div class="imageBorder"></div>
+            <div class="imageBorder"></div>
+        </div>
+        <div class="informationText">
+            <p class="text">This is some subtext under an illustation or image</p>
+            <p class="text">This is some subtext under an illustation or image</p>
+            <p class="text">This is some subtext under an illustation or image</p>
+            <p class="text">This is some subtext under an illustation or image</p>
+        </div>
+    </div>
+    <div class="quoteContainer">
+        <blockquote>
+            <p class="quoteText">
+                This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+            </p>
+            </blockquote>
+            <footer class="quoteAuthor"> -Thor, God of Thunder</footer>
+    </div>
+    <div class="callToAction">
+        <div class="callBackground">
+            <h1 class="callHeader">Call to action! It's Time!</h1>
+            <p class="callText">Sign up for our product by clicking that button right over there!</p>
+            <button class="callButton">Sign up</button>
+        </div>
+    </div>
+    <footer class="footer">
+        Copyright @ The Odin Project 2021
+    </footer>
 </body>
 </html>
