call to action styled

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     <div class="callToAction">
         <div class="callBackground">
             <h1 class="callHeader">Call to action! It's Time!</h1>
-            <p class="callText">Sign up for our product by clicking that button right over there!</p>
-            <button class="callButton">Sign up</button>
+            <p class="callText">Sign up for our product by clicking that button right over there!<button class="callButton">Sign up</button></p>
+            
         </div>
     </div>
     <footer class="footer">
