final addition to the page

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
     <div class="callToAction">
         <div class="callBackground">
             <h1 class="callHeader">Call to action! It's Time!</h1>
-            <p class="callText">Sign up for our product by clicking that button right over there!<button class="callButton">Sign up</button></p>
-            
+            <p class="callText">Sign up for our product by clicking that button right over there!</p>
+            <button class="callButton">Sign up</button>
         </div>
     </div>
     <footer class="footer">
-        Copyright @ The Odin Project 2021
+        <p class="footerText">Copyright @ The Odin Project 2021</p>
     </footer>
 </body>
 </html>
